<resources>
    <string name="app_name">ProjetEDTmail</string>

    <!-- START OF SETTINGS ACTIVITY STRINGS -->

    <!-- Settings Activity Title -->
    <string name="activity_settings_title">Paramètres</string>

    <!-- Preference Titles -->
    <string name="sync_edt_header">Synchronisation de l\'EDT</string>
    <string name="sync_mail_header">Synchronisation de la boîte mail</string>
    <string name="edt_style_header">Apparence de l\'EDT</string>
    <string name="edt_management_header">Gestion de l\'EDT</string>
    <string name="app_preferences_header">Paramètres généraux</string>

    <!-- Sync EDT Preferences -->
    <string name="edt_scan_title">Scan QR code</string>
    <string name="edt_scan_summary">Scanner le QR code de l\'emploi du temps.</string>

    <string name="url_edt_title">URL de synchronisation</string>
    <string name="url_edt_summary">Entrer manuellement l\'URL de l\'EDT en cliquant ici.</string>

    <string name="sync_edt_title">Synchro. au démarrage</string>
    <string name="sync_edt_summary">Mettre à jour l\'EDT au démarrage de l\'application.</string>

    <string name="interval_edt_title">Délai de synchronisation</string>
    <string name="interval_edt_summary">Configurer la durée entre deux synchronisation.</string>

    <!-- Sync Mail Preferences -->
    <string name="addr_mail_title">Adresse mail</string>
    <string name="addr_mail_summary">Saisir l\'adresse de la boîte mail à importer.</string>

    <string name="sync_mail_title">Synchro. au démarrage</string>
    <string name="sync_mail_summary">Mettre à jour la boîte mail au démarrage de l\'application.</string>

    <!-- EDT Style Preferences -->
    <string name="edt_custom_color_title">Couleur personnalisée</string>
    <string name="edt_custom_color_summary">Personnaliser la couleur des événements de l\'EDT.</string>

    <string name="edt_color_picker_title">Couleur de fond des événements</string>
    <string name="edt_color_picker_summary">Choisir la couleur de fond des événements.</string>

    <string name="edt_return_button_title">Bouton "Retour"</string>
    <string name="edt_return_button_summary">Afficher le bouton permettant de revenir à la date du jour dans l\'EDT.</string>
    <string name="edt_button_opacity_title">Opacité du bouton "Retour"</string>

    <!-- EDT management Preferences -->
    <string name="edt_event_filter_title">Filtrage des événements</string>
    <string name="edt_event_filter_summary">Masquer les événements présents dans la liste des événements masqués.</string>

    <string name="edt_filtered_event_management_title">Liste des événements masqués</string>
    <string name="edt_filtered_event_management_summary">Gérer les événements masqués. Supprimer un événement de la liste le fera à nouveau apparaître dans l\'EDT.</string>

    <!-- App Preferences -->
    <string name="app_language_title">Langue</string>
    <string name="app_language_summary">Choisir la langue de l\'application.</string>

    <string name="app_theme_title">Thème Sombre</string>
    <string name="app_theme_summary">Afficher l\'application dans son thème sombre.</string>

    <!-- END OF SETTINGS ACTIVITY STRINGS -->

    <!-- SignIn Activity Title -->
    <string name="SignIn">Connexion</string>

    <!-- SignUp Activity Title -->
    <string name="SignUp">Inscription</string>

    <!-- Strings related to signin and signup -->
    <string name="username">Pseudo</string>
    <string name="password">PIN</string>

    <!-- Strings related to signin -->
    <string name="Connexion">Connexion</string>
    <string name="Creation">Création de compte</string>

    <!-- Strings related to signup -->
    <string name="Inscription">Inscription</string>
    <string name="Identification">Identifiez-vous</string>
    <string name="Nom">Nom</string>
    <string name="Prenom">Prénom</string>

    <!-- FilterEvent Activity Title -->
    <string name="filter_event">Liste des événements masqués</string>

    <!-- ScanQrCode Activity Title -->
    <string name="scan_qr_code">Scan du code QR</string>
    <string name="calendar_view_activity_title">EDT</string>

</resources>